# OmniCLI

./: .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pnpm-lock.yaml  replit.md
.agents/memory/: MEMORY.md  omnicli-build-lessons.md  omnicli-setup.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pre-release.yml  release.yml  rust.yml  security.yml  typescript.yml
artifacts/api-server/: build.mjs  package.json
artifacts/api-server/src/lib/: exec.ts
artifacts/api-server/src/routes/: archive.ts  backup.ts  convert.ts  dashboard.ts  dev.ts  files.ts  index.ts  search.ts  workspace.ts
artifacts/omni-dashboard/: index.html  package.json  vite.config.ts
artifacts/omni-dashboard/.replit-artifact/: artifact.toml
artifacts/omni-dashboard/src/: App.tsx  index.css
artifacts/omni-dashboard/src/components/layout/: shell.tsx
artifacts/omni-dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  states.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  tooltip.tsx
artifacts/omni-dashboard/src/lib/: utils.ts
artifacts/omni-dashboard/src/pages/: archive.tsx  backup.tsx  convert.tsx  dashboard.tsx  dev.tsx  files.tsx  not-found.tsx  search.tsx  workspace.tsx
attached_assets/: AGENT_1784273168551.md  GAPS_1_1784457568954.md  PRD-1_1784273168645.md  PRD_2_1784457569007.md  Pasted-My-target-is-making-an-advanced-professional-Powerful-m_1784457522429.txt
lib/api-spec/: openapi.yaml
lib/db/: drizzle.config.ts
lib/db/src/: index.ts
lib/db/src/schema/: activity.ts  backup.ts  index.ts  notes.ts  snippets.ts  todos.ts
omnicli/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
omnicli/.cargo/: audit.toml
omnicli/.github/workflows/: ci.yml  release.yml
omnicli/crates/omni-archive/: Cargo.toml
omnicli/crates/omni-archive/src/: create.rs  error.rs  extract.rs  lib.rs  list.rs
omnicli/crates/omni-backup/: Cargo.toml
omnicli/crates/omni-backup/src/: create.rs  error.rs  lib.rs  manifest.rs  restore.rs  tests.rs  verify.rs
omnicli/crates/omni-cli/: Cargo.toml
omnicli/crates/omni-cli/src/: cli.rs  dispatch.rs  main.rs
omnicli/crates/omni-cli/tests/: integration.rs
omnicli/crates/omni-config/: Cargo.toml
omnicli/crates/omni-config/src/: error.rs  formats.rs  lib.rs  tests.rs
omnicli/crates/omni-convert/: Cargo.toml
omnicli/crates/omni-convert/src/: codec.rs  error.rs  lib.rs
omnicli/crates/omni-core/: Cargo.toml
omnicli/crates/omni-core/src/: config.rs  error.rs  hash.rs  lib.rs  output.rs  platform.rs
omnicli/crates/omni-dev/: Cargo.toml
omnicli/crates/omni-dev/src/: base64.rs  error.rs  hash.rs  json.rs  jwt.rs  lib.rs  regex_tool.rs  tests.rs  uuid_gen.rs
omnicli/crates/omni-file/: Cargo.toml
omnicli/crates/omni-file/src/: clean.rs  compare.rs  copy_move.rs  decrypt.rs  duplicate.rs  encrypt.rs  error.rs  find.rs  hash.rs  lib.rs  sync.rs
omnicli/crates/omni-search/: Cargo.toml
omnicli/crates/omni-search/src/: error.rs  index.rs  lib.rs  search.rs
omnicli/crates/omni-workspace/: Cargo.toml
omnicli/crates/omni-workspace/src/: db.rs  error.rs  lib.rs  notes.rs  snippets.rs  tests.rs  todos.rs
omnicli/docs/: MEMORY_BANK.md  USAGE.md
omnicli/scripts/: install.sh
omnicli/tests/fixtures/: sample.csv  sample.json  sample.md  sample.toml  sample.yaml
omnicli/tests/fixtures/search_corpus/: code.rs  notes.txt
