[workspace]
resolver = "2"
members = [
    "crates/omni-cli",
    "crates/omni-core",
    "crates/omni-file",
    "crates/omni-search",
    "crates/omni-archive",
    "crates/omni-convert",
    "crates/omni-dev",
    "crates/omni-workspace",
    "crates/omni-backup",
    "crates/omni-config",
]

[workspace.dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "wrap_help"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Hashing
blake3 = "1"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
sha1 = "0.10"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Filesystem / traversal
walkdir = "2"
notify = "6"

# Output / formatting
indicatif = "0.17"
console = "0.15"

# Compression / archiving
flate2 = "1"
tar = "0.4"
zip = "2"
xz2 = "0.1"

# Format conversion
csv = "1"
pulldown-cmark = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "webp", "jpeg"] }

# Utilities
regex = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
age = "0.10"
glob = "0.3"
tempfile = "3"
lopdf = "0.33"
bzip2 = "0.4"
