[package]
name = "omni-backup"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
omni-core = { path = "../omni-core" }

anyhow    = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
blake3    = { workspace = true }
walkdir   = { workspace = true }
chrono    = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
