[package]
name = "omni-config"
version = "0.1.0"
edition = "2021"

[dependencies]
omni-core = { path = "../omni-core" }

anyhow     = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml       = { workspace = true }
quick-xml  = { version = "0.36", features = ["serialize"] }

[dev-dependencies]
tempfile = { workspace = true }
