[package]
name = "omni-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
blake3     = { workspace = true }
sha2       = { workspace = true }
md-5       = { workspace = true }
hex        = { workspace = true }
console    = { workspace = true }
indicatif  = { workspace = true }
chrono     = { workspace = true }
tempfile   = { workspace = true }
dirs       = "5"
# libc removed — std::io::IsTerminal (stable since Rust 1.70) handles TTY detection
# cross-platform including Windows and WSL2
