[package]
name = "omni-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
omni-core = { path = "../omni-core" }

anyhow    = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml      = { workspace = true }
blake3    = { workspace = true }
sha2      = { workspace = true }
md-5      = { workspace = true }
hex       = { workspace = true }
base64    = { workspace = true }
uuid      = { workspace = true }
regex     = { workspace = true }
chrono    = { workspace = true }
sha1      = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
