[package]
name = "omni-search"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
omni-core = { path = "../omni-core" }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
