[package]
name = "omni-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
omni-core = { path = "../omni-core" }

anyhow    = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
rusqlite  = { workspace = true }
chrono    = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
